D Agregando hover y enlace a los botones

--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
         <div class="text">
             <h2>Nezuko</h2>
             <p> 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Corrupti totam facere omnis in perferendis nisi eius veritatis ea. Hic, modi. 
+                Has maiorum habemus detraxit at. Time fabulas splendide et his. Usa mullan dolorum quaestio el, sit vidit facilisis ea. Per ne impedit iracundia negledentur.
             </p>
         </div>
         <div class="botones">
-            <button class="Follow"><b>Follow</b></button>
-            <button class="telegram"></button>
+            <a class="Follow" href="https://www.instagram.com/a.m_helen/" target="_blank">Follow</a>
+            <a class="telegram" href="https://web.telegram.org" target="_blank"></a>
         </div>
     </div>
 </body>
